# oochy

./: .gitignore  Cargo.toml  DESIGN.md  ENUMALABS_USERAPP.md  README.md  TASKS.md  TODO.md  default.profraw  kittypaw.db  kittypaw.db-shm  kittypaw.db-wal  oochy.toml.example
.github/workflows/: ci.yml  release.yml
.kittypaw/skills/: ---.js  ---.skill.toml  -54076829-cli-.js  -54076829-cli-.skill.toml
.kittypaw/skills/.archive/: ---.v1.skill.toml
.state/: pipeline.json
crates/kittypaw-channels/src/: discord.rs  kakao.rs  lib.rs  registry.rs  slack.rs  telegram.rs  websocket.rs
crates/kittypaw-cli/: Cargo.toml
crates/kittypaw-cli/src/: agent_loop.rs  assistant.rs  compaction.rs  lib.rs  main.rs  schedule.rs  skill_executor.rs  teach_loop.rs
crates/kittypaw-cli/src/commands/: api.rs  chat.rs  daemon.rs  fixes.rs  helpers.rs  install.rs  mod.rs  reflection.rs  remote.rs  serve.rs
crates/kittypaw-cli/src/skill_executor/: agent.rs  mod.rs  telegram.rs
crates/kittypaw-cli/tests/: integration.rs
crates/kittypaw-core/: Cargo.toml
crates/kittypaw-core/src/: app_paths.rs  capability.rs  config.rs  credential.rs  error.rs  lib.rs  package.rs  package_manager.rs  permission.rs  profile.rs  registry.rs  secrets.rs  skill.rs  telegram.rs  types.rs
crates/kittypaw-engine/: Cargo.toml
crates/kittypaw-engine/src/: agent_loop.rs  assistant.rs  compaction.rs  lib.rs  mcp_registry.rs  reflection.rs  schedule.rs  skill_registry.rs  teach_loop.rs
crates/kittypaw-engine/src/agent_loop/: commands.rs  mod.rs  prompt.rs
crates/kittypaw-engine/src/schedule/: auto_fix.rs  cron.rs  execution.rs  mod.rs  notification.rs  persistence.rs
crates/kittypaw-engine/src/skill_executor/: agent.rs  discord.rs  env.rs  file.rs  git.rs  http.rs  image.rs  llm.rs  memory.rs  moa.rs  mod.rs  process.rs  shell.rs  skill_mgmt.rs  slack.rs  storage.rs  telegram.rs  tests.rs  tts.rs
crates/kittypaw-gui/: Cargo.toml
crates/kittypaw-gui/frontend/src/lib/components/: PermissionPopup.svelte
crates/kittypaw-gui/frontend/src/routes/: +page.svelte
crates/kittypaw-gui/src/: bundled_packages.rs  i18n.rs  lib.rs  main.rs  state.rs
crates/kittypaw-gui/src/components/: app.rs  chat.rs  dashboard.rs  mod.rs  onboarding.rs  permission_dialog.rs  settings.rs  sidebar.rs  skill_config.rs  skill_gallery.rs  skill_store.rs
crates/kittypaw-llm/src/: claude.rs  lib.rs  openai.rs  registry.rs  stt.rs
crates/kittypaw-sandbox/src/: backend.rs  forked.rs  lib.rs  quickjs.rs  sandbox.rs  threaded.rs
crates/kittypaw-store/: Cargo.toml
crates/kittypaw-store/src/: context.rs  conversation.rs  fixes.rs  lib.rs  memory_provider.rs  schedule.rs
crates/kittypaw-store/src/migrations/: 006_fts5_memory.sql  009_skill_fixes.sql  013_skill_schedule.sql
crates/kittypaw-workspace/src/: indexer.rs  manager.rs  permission_checker.rs
crates/oochy-channels/src/: lib.rs
crates/oochy-cli/: Cargo.toml
crates/oochy-cli/src/: agent_loop.rs  main.rs  schedule.rs  skill_executor.rs  teach_loop.rs
crates/oochy-core/: Cargo.toml
crates/oochy-core/src/: config.rs  error.rs  lib.rs  skill.rs  types.rs
crates/oochy-sandbox/src/: sandbox.rs
crates/oochy-sandbox/tests/: security.rs
crates/oochy-web/: Cargo.toml
crates/oochy-web/src/: dashboard.rs  lib.rs  routes.rs
crates/oochy-web/static/: app.js  index.html  style.css
docs/: 20260409-1500-research-agent-web-search.md  index.html  main.js  research-2026-03-28.md  robots.txt  sitemap.xml  style.css
docs/en/: index.html
docs/ja/: index.html
docs/superpowers/: competitor-wow-cases.md
docs/superpowers/plans/: 2026-04-03-tier1-structural-hardening.md
relay/: package.json  tsconfig.json  wrangler.toml
relay/src/: hmac.ts  index.ts
relay/test/: worker.test.ts
scripts/: build-mac.sh  kittypaw-mic.swift
tests/: e2e-reflection.sh  e2e-schedule.sh
