[workspace]
resolver = "2"
members = [
    "crates/kittypaw-core",
    "crates/kittypaw-llm",
    "crates/kittypaw-sandbox",
    "crates/kittypaw-store",
    "crates/kittypaw-cli",
    "crates/kittypaw-channels",
    "crates/kittypaw-workspace",
    "crates/kittypaw-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared across crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# MCP client
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }

# Internal crates
kittypaw-core = { path = "crates/kittypaw-core", features = ["registry"] }
kittypaw-llm = { path = "crates/kittypaw-llm" }
kittypaw-sandbox = { path = "crates/kittypaw-sandbox" }
kittypaw-store = { path = "crates/kittypaw-store" }
kittypaw-channels = { path = "crates/kittypaw-channels" }
kittypaw-workspace = { path = "crates/kittypaw-workspace" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
