[package]
name = "kittypaw-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "kittypaw_engine"
path = "src/lib.rs"

[dependencies]
kittypaw-core = { workspace = true }
kittypaw-llm = { workspace = true }
kittypaw-sandbox = { workspace = true }
kittypaw-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.16"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
