[package]
name = "kittypaw-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "kittypaw_engine"
path = "src/lib.rs"

[dependencies]
kittypaw-core = { workspace = true }
kittypaw-llm = { workspace = true }
kittypaw-sandbox = { workspace = true }
kittypaw-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
url = "2"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.16"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
edge-tts-rust = "0.1"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"

[features]
# 실제 LLM API를 호출하는 골든셋/behavioral 테스트. 기본 cargo test에서 제외됨.
# 실행: cargo test -p kittypaw-engine --features llm-eval
# 필요: KITTYPAW_API_KEY 환경변수
llm-eval = []
