[package]
name = "kittypaw-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kittypaw-gui"
path = "src/main.rs"

[dependencies]
kittypaw-core = { path = "../kittypaw-core", features = ["registry"] }
kittypaw-llm = { path = "../kittypaw-llm" }
kittypaw-store = { path = "../kittypaw-store" }
kittypaw-sandbox = { path = "../kittypaw-sandbox" }
kittypaw-cli = { path = "../kittypaw-cli" }
kittypaw-workspace = { path = "../kittypaw-workspace" }

dioxus = { version = "0.6", features = ["desktop"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs-next = "2"
rfd = "0.15"
futures-util = "0.3"
pulldown-cmark = "0.12"
