[package]
name = "kittypaw-store"
version.workspace = true
edition.workspace = true

[dependencies]
kittypaw-core = { workspace = true, features = ["rusqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3.1"
chrono = { version = "0.4", features = ["serde"] }
