[package]
name = "oochy-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oochy"
path = "src/main.rs"

[dependencies]
oochy-core = { workspace = true }
oochy-llm = { workspace = true }
oochy-sandbox = { workspace = true }
oochy-channels = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
atty = "0.2"
url = "2"
