[package]
name = "oochy-web"
version.workspace = true
edition.workspace = true

[dependencies]
oochy-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
rust-embed = "8"
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
